--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "rockbell"
 version = "1.0.5"
+authors = ["Hifumi1337"]
 edition = "2018"
-author = "Hifumi1337"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
