--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rockbell"
 version = "1.0.6"
-authors = ["Hifumi1337"]
+authors = ["azazelm3dj3d"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
