--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "rockbell"
 description = "Rockbell is a no dependencies multithreaded web server for building HTML and Markdown (coming soon) websites."
-version = "0.0.1"
+version = "0.0.2"
 authors = ["azazelm3dj3d"]
 edition = "2018"
 license = "BSD-2-Clause"
 categories = ["filesystem", "web-programming", "web-programming::http-server"]
 keywords = ["server", "web", "rockbell", "html"]
-repository = "https://github.com/azazellabs/rockbell"
+repository = "https://github.com/azazelm3dj3d/rockbell"
 
 [dependencies]
